--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,14 @@
 
 <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/appicon.ico" />
     <!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using create-react-app" />
-    <link rel="apple-touch-icon" href="/maskable_icon_x192.png" />
-    <link rel="apple-touch-icon" href="/maskable_icon_x512.png" />
-
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/maskable_icon_x192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/maskable_icon_x512.png" />
+    <meta name="apple-mobile-web-app-status-bar" content="#FFF9F4">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
