--- a/public/offline.html
+++ b/public/offline.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="%PUBLIC_URL%/appicon.ico">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Offline</title>
+    <title>PWA Chat App(Offline)</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -49,6 +49,21 @@
             color: #337ab7;
             text-decoration: none;
         }
+        
+        .button {
+            background-color: #f9f9f9;
+            border: 1px solid #333333;
+            color: #333333;
+            border-radius: 8px;
+            ;
+            padding: 10px 25px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            margin: 4px 2px;
+            cursor: pointer;
+        }
     </style>
 </head>
 
@@ -56,6 +71,7 @@
     <div class="container">
         <h1>Oops! You're Offline</h1>
         <p>We apologize for the inconvenience, but it seems like you're currently offline.</p>
+        <input class="button" type="button" value="Reload Page" onClick="window.location.reload(true)">
         <p>Please check your internet connection and try again later.</p>
         <p>If you need assistance, you can contact our support team at <a href="mailto:support@example.com" class="contact-link">support@example.com</a>.</p>
     </div>
